fixed some undocumented a11y contrast issues for portal

--- a/ui/apps/io.ox/portal/style.less
+++ b/ui/apps/io.ox/portal/style.less
@@ -213,7 +213,7 @@
             .italic { font-style: italic; }
 
             .gray {
-                color: rgba(0, 0, 0, 0.5);
+                color: rgba(0, 0, 0, 0.6);
 
                 html.high-contrast & { color: @black; }
             }
